fixed extra margins for home page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -15,6 +15,7 @@
     height: 90vh;
     position: relative;
     overflow: hidden;
+    padding: 0px;
   }
 
   .banner:before {
@@ -39,6 +40,7 @@
     height: 90vh;
     position: relative;
     overflow: hidden;
+    padding: 0px;
   }
 
   .banner:before {
